[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu/Join_Server_Tab.gd" type="Script" id=1]
[ext_resource path="res://Menu/Color_Picker_Button.gd" type="Script" id=2]

[node name="Join_Server_Tab" type="VBoxContainer"]
margin_top = 332.0
margin_right = 340.0
margin_bottom = 514.0
custom_constants/separation = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Server_Address_Label" type="Label" parent="."]
margin_right = 340.0
margin_bottom = 14.0
text = "Server Address"
valign = 1

[node name="Server_Address_Input" type="LineEdit" parent="."]
margin_top = 22.0
margin_right = 340.0
margin_bottom = 46.0
text = "localhost"

[node name="Server_Port_Label" type="Label" parent="."]
margin_top = 54.0
margin_right = 340.0
margin_bottom = 68.0
text = "Server Port"

[node name="Server_Port_Input" type="LineEdit" parent="."]
margin_top = 76.0
margin_right = 340.0
margin_bottom = 100.0
text = "1234"

[node name="Player_Name_Label" type="Label" parent="."]
margin_top = 108.0
margin_right = 340.0
margin_bottom = 122.0
text = "Player Name"

[node name="Player_Name_Input" type="LineEdit" parent="."]
margin_top = 130.0
margin_right = 340.0
margin_bottom = 154.0
text = "ClientPlayer"

[node name="Color_Label" type="Label" parent="."]
margin_top = 162.0
margin_right = 340.0
margin_bottom = 176.0
text = "Player Color"

[node name="Color_Picker_Button" type="ColorPickerButton" parent="."]
margin_top = 184.0
margin_right = 340.0
margin_bottom = 204.0
color = Color( 0.313726, 0.85098, 0.537255, 1 )
script = ExtResource( 2 )

[node name="Join_Button" type="Button" parent="."]
margin_top = 212.0
margin_right = 340.0
margin_bottom = 232.0
text = "Join Server"
[connection signal="pressed" from="Join_Button" to="." method="_on_JoinButton_pressed"]
